// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Text > it works with defaults 1`] = `
<div
  class="_Text_c6fd40 _medium_c6fd40"
  data-testid="Text"
>
  Hello world
</div>
`;

exports[`Text > it works with variants 1`] = `
<div
  class="_Text_c6fd40 _small_c6fd40"
  data-testid="Text"
>
  Hello world
</div>
`;

exports[`Text > it works with variants 2`] = `
<div
  class="_Text_c6fd40 _medium_c6fd40"
  data-testid="Text"
>
  Hello world
</div>
`;

exports[`Text > it works with variants 3`] = `
<div
  class="_Text_c6fd40 _large_c6fd40"
  data-testid="Text"
>
  Hello world
</div>
`;
